--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,7 @@ resources:
   - repository: templates
     type: github
     name: unmango/azure-pipelines-templates
+    endpoint: unmango
 
 variables:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
