--- a/src/UnMango.Rest/UnMango.Rest.csproj
+++ b/src/UnMango.Rest/UnMango.Rest.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="all" />
     <PackageReference Include="MinVer" Version="2.3.0" PrivateAssets="all" />
+    <PackageReference Include="System.IO.Pipelines" Version="4.7.2" />
   </ItemGroup>
 
 </Project>
