--- a/src/UnMango.Rest/UnMango.Rest.csproj
+++ b/src/UnMango.Rest/UnMango.Rest.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.5" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="all" />
     <PackageReference Include="MinVer" Version="2.3.0" PrivateAssets="all" />
     <PackageReference Include="System.IO.Pipelines" Version="4.7.2" />
