--- a/src/UnMango.Rest.Abstractions/UnMango.Rest.Abstractions.csproj
+++ b/src/UnMango.Rest.Abstractions/UnMango.Rest.Abstractions.csproj
@@ -2,16 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>UnMango.Rest</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.5" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="all" />
     <PackageReference Include="MinVer" Version="2.3.0" PrivateAssets="all" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\UnMango.Rest\UnMango.Rest.csproj" />
   </ItemGroup>
 
 </Project>
