--- a/src/UnMango.Rest/UnMango.Rest.csproj
+++ b/src/UnMango.Rest/UnMango.Rest.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Utf8Json" Version="1.3.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UnMango.Rest.Abstractions\UnMango.Rest.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
