--- a/src/UnMango.Rest.Abstractions/UnMango.Rest.Abstractions.csproj
+++ b/src/UnMango.Rest.Abstractions/UnMango.Rest.Abstractions.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>UnMango.Rest</RootNamespace>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
