--- a/src/UnMango.Rest.DependencyInjection/UnMango.Rest.DependencyInjection.csproj
+++ b/src/UnMango.Rest.DependencyInjection/UnMango.Rest.DependencyInjection.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.5" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="all" />
     <PackageReference Include="MinVer" Version="2.3.0" PrivateAssets="all" />
   </ItemGroup>
