Add test filter

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,7 @@ jobs:
     postBuild:
     - template: /steps/dotnet/test.yml
       parameters:
+        projects: '**/test/**/*.csproj'
         buildProjects: false
         installReportGenerator: false
 
