--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,23 +4,10 @@ trigger:
     include:
     - master
     - release/*
-  paths:
-    include:
-    - src/*
-    - tool/*
-    - azure-pipelines.yml
 
 pr:
-  branches:
-    include:
-    - master
-    - release/*
-  paths:
-    exclude:
-    - docs/*
-    - README.md
-    - .dependabot/*
-    - .editorconfig
+- master
+- release/*
 
 pool: Linux
 
@@ -54,6 +41,7 @@ jobs:
     postBuild:
     - template: /steps/dotnet/test.yml
       parameters:
+        projects: '**/test/**/*.csproj'
         buildProjects: false
         installReportGenerator: false
 
