--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -10,6 +10,22 @@ update_configs:
       update_type: semver:minor
 
 - package_manager: dotnet:nuget
+  directory: "/src/UnMango.Rest.Abstractions"
+  update_schedule: live
+  automerged_updates:
+  - match:
+      dependency_type: all
+      update_type: semver:minor
+
+- package_manager: dotnet:nuget
+  directory: "/src/UnMango.Rest.DependencyInjection"
+  update_schedule: live
+  automerged_updates:
+  - match:
+      dependency_type: all
+      update_type: semver:minor
+
+- package_manager: dotnet:nuget
   directory: "/test/UnMango.Rest.Tests"
   update_schedule: live
   automerged_updates:
