--- a/NuGet.Config
+++ b/NuGet.Config
@@ -2,6 +2,12 @@
 <configuration>
   <packageSources>
     <add key="github" value="https://nuget.pkg.github.com/unmango/index.json" />
-    <add key="nuget" value="https://api.nuget.org/v3/index.json" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
+
+  <packageSourceMapping>
+    <packageSource key="nuget.org">
+      <package pattern="*" />
+    </packageSource>
+  </packageSourceMapping>
 </configuration>
