Add Jetbrains annotations

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -21,5 +21,9 @@
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" />
+  </ItemGroup>
 
 </Project>
