Rename main lib to backup

--- a/src/UnMango.Rest.DependencyInjection/UnMango.Rest.DependencyInjection.csproj
+++ b/src/UnMango.Rest.DependencyInjection/UnMango.Rest.DependencyInjection.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UnMango.Rest\UnMango.Rest.csproj" />
+    <ProjectReference Include="..\UnMango.Rest.Backup\UnMango.Rest.Backup.csproj" />
   </ItemGroup>
 
 </Project>
