Working on it all

--- a/test/UnMango.Rest.AcceptanceTests.CSharp/UnMango.Rest.AcceptanceTests.CSharp.csproj
+++ b/test/UnMango.Rest.AcceptanceTests.CSharp/UnMango.Rest.AcceptanceTests.CSharp.csproj
@@ -7,12 +7,14 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\UnMango.Rest.DependencyInjection\UnMango.Rest.DependencyInjection.csproj" />
     <ProjectReference Include="..\..\src\UnMango.Rest\UnMango.Rest.fsproj" />
     <ProjectReference Include="..\UnMango.Rest.AcceptanceTests.Fixture\UnMango.Rest.AcceptanceTests.Fixture.csproj" />
   </ItemGroup>
