--- a/src/UnMango.Rest.DependencyInjection/UnMango.Rest.DependencyInjection.csproj
+++ b/src/UnMango.Rest.DependencyInjection/UnMango.Rest.DependencyInjection.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UnMango.Rest.Backup\UnMango.Rest.Backup.csproj" />
+    <ProjectReference Include="..\UnMango.Rest\UnMango.Rest.fsproj" />
   </ItemGroup>
 
 </Project>
