--- a/src/UnMango.Rest/UnMango.Rest.fsproj
+++ b/src/UnMango.Rest/UnMango.Rest.fsproj
@@ -1,13 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="packages.lock.json" />
     <Compile Include="Util.fs" />
+    <Compile Include="SystemTextJsonSerializer.fs" />
+    <Compile Include="RestResponse.fs" />
     <Compile Include="RestClient.fs" />
     <Compile Include="RestRequest.fs" />
     <Compile Include="Rest.fs" />
@@ -17,6 +19,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\UnMango.Rest.Abstractions\UnMango.Rest.Abstractions.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Text.Json" />
   </ItemGroup>
 
 </Project>
